# qt-dynamic-sqlite

./: .gitignore  CMakeLists.txt
src/: db_row.hpp  db_wrapper.cpp  db_wrapper.h  dynamic_sqlite_model.cpp  dynamic_sqlite_model.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/db/: db_base_table.hpp  db_helper.cpp  db_helper.h  db_instance.cpp  db_instance.h  db_test_table.cpp  db_test_table.h  like_query.hpp  select_query.hpp
src/db/cache/: cache_controller.cpp  cache_controller.h  cache_window.hpp  row_fetcher.cpp  row_fetcher.h
test/: reset_db.sh  select_all.sh  test.db
test/fetcher-test/: CMakeLists.txt
test/fetcher-test/src/: mainwindow.ui
test/fetcher-test/src/fetcher/: fetcher.h  window.hpp
